Sync theme with tpl_lyquix 1.0.12

--- a/css/less/01-normalize.less
+++ b/css/less/01-normalize.less
@@ -3,12 +3,12 @@
  *
  * Based on https://github.com/necolas/normalize.css
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 html {
@@ -23,14 +23,14 @@ html {
 	// ref: https://www.microsoft.com/typography/otspec/featurelist.htm
 	font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "onum" 1, "pnum" 1, "dlig" 0, "tnum" 0,  "lnum" 0;
 	// smooth (momentum) scrolling
-    -webkit-overflow-scrolling: touch;
-    // font antialiasing on webskit browsers
-    -webkit-font-smoothing: antialiased;
-    // correct line height
-    line-height: 1.15;
-    // prevent font size adjustement in Windows Phone and iOS
-    -ms-text-size-adjust: 100%;
-    -webkit-text-size-adjust: 100%;
+	-webkit-overflow-scrolling: touch;
+	// font antialiasing on webskit browsers
+	-webkit-font-smoothing: antialiased;
+	// correct line height
+	line-height: 1.15;
+	// prevent font size adjustement in Windows Phone and iOS
+	-ms-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
 }
 
 // Remove default margin.
@@ -69,8 +69,8 @@ audio,
 canvas,
 progress,
 video {
-	display: inline-block; 
-	vertical-align: baseline; 
+	display: inline-block;
+	vertical-align: baseline;
 }
 
 // Prevent modern browsers from displaying `audio` without controls.
@@ -209,7 +209,7 @@ pre {
 	overflow: auto;
 	white-space: pre-wrap;
 	white-space: -moz-pre-wrap;
-	word-wrap: break-word;  
+	word-wrap: break-word;
 }
 
 // Address odd `em`-unit font size rendering in all browsers.
