--- a/css/less/02-colors.less
+++ b/css/less/02-colors.less
@@ -1,17 +1,17 @@
-/**
+	/**
  * 02-colors.less - Color styles
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
-@import (less) "02-colors-branding.less";				// defines the custom branding colors for the site
+@import (less) "02-colors-branding.less";					// defines the custom branding colors for the site
 @import (less,optional) "custom/02-colors-branding.less";	// optional custom override
-@import (less) "02-colors-palette.less";				// derives the complete palette from branding colors and standard colors
+@import (less) "02-colors-palette.less";					// derives the complete palette from branding colors and standard colors
 @import (less,optional) "custom/02-colors-palette.less";	// optional custom override
-@import (less) "02-colors-elements.less";				// assigns colors to element-color variables
+@import (less) "02-colors-elements.less";					// assigns colors to element-color variables
 @import (less,optional) "custom/02-colors-elements.less";	// optional custom override
