--- a/css/less/03-fonts-family.less
+++ b/css/less/03-fonts-family.less
@@ -1,15 +1,15 @@
 /**
  * 03-fonts-family.less - Load some base Google fonts
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Open Sans (sans-serif)
 // Playfair Display (serif)
 // Roboto Mono (monospaced)
-@import (css) url('https://fonts.googleapis.com/css?family=Open+Sans|Playfair+Display|Roboto+Mono');
+@import (css) url('//fonts.googleapis.com/css?family=Open+Sans|Playfair+Display|Roboto+Mono');
