--- a/css/less/03-fonts.less
+++ b/css/less/03-fonts.less
@@ -1,16 +1,16 @@
 /**
  * 03-fonts.less - Font styles
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
-@import (less) "03-fonts-family.less";					// defines the font families
+@import (less) "03-fonts-family.less";						// defines the font families
 @import (less,optional) "custom/03-fonts-family.less";		// optional additional font families
-@import (less) "03-fonts-icons.less";					// loads icon fonts and classes
-@import (less) "03-fonts-elements.less";				// assigns fonts to various elements
+@import (less) "03-fonts-icons.less";						// loads icon fonts and classes
+@import (less) "03-fonts-elements.less";					// assigns fonts to various elements
 @import (less,optional) "custom/03-fonts-elements.less";	// optional custom override
