--- a/css/less/04-blocks-downsized6.less
+++ b/css/less/04-blocks-downsized6.less
@@ -1,12 +1,12 @@
 /**
  * 04-blocks-downsized6.less - Layout downsized block for block6 layouts, in smaller screens the larger blocks must be downsized automatically in order to fit
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Downsized blocks
@@ -111,108 +111,108 @@ body[screen=lg] {
 
 body[screen=xs] {
   .blkbleed-padding {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 { 
-        width: @blk6-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 {
+        width: @blk6-width + @blk-padding-left + @blk-padding-right * 2;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * { 
-        max-width: @blk6-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * {
+        max-width: @blk6-width + @blk-padding-left + @blk-padding-right * 2;
       }
   }
   .blkbleed-border {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 { 
-        width: @blk6-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 {
+        width: @blk6-width + @blk-padding-border-left + @blk-padding-border-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * { 
-        max-width: @blk6-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * {
+        max-width: @blk6-width + @blk-padding-border-left + @blk-padding-border-right;
       }
   }
   .blkbleed-margin {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 { 
-        width: @blk6-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13, &.blk12, &.blk11, &.blk10, &.blk9, &.blk8 , &.blk7 {
+        width: @blk6-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * { 
-        max-width: @blk6-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > *, &.blk12 > *, &.blk11 > *, &.blk10 > *, &.blk9 > *, &.blk8  > *, &.blk7 > * {
+        max-width: @blk6-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
   }
 }
 
 body[screen=sm] {
   .blkbleed-padding {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 { 
-        width: @blk12-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 {
+        width: @blk12-width + @blk-padding-left + @blk-padding-right * 2;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * { 
-        max-width: @blk12-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * {
+        max-width: @blk12-width + @blk-padding-left + @blk-padding-right * 2;
       }
   }
   .blkbleed-border {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 { 
-        width: @blk12-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 {
+        width: @blk12-width + @blk-padding-border-left + @blk-padding-border-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * { 
-        max-width: @blk12-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * {
+        max-width: @blk12-width + @blk-padding-border-left + @blk-padding-border-right;
       }
   }
   .blkbleed-margin {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 { 
-        width: @blk12-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19, &.blk18, &.blk17,  &.blk16, &.blk15, &.blk14, &.blk13 {
+        width: @blk12-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * { 
-        max-width: @blk12-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > *, &.blk18 > *, &.blk17 > *,  &.blk16 > *, &.blk15 > *, &.blk14 > *, &.blk13 > * {
+        max-width: @blk12-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
   }
 }
 
 body[screen=md] {
   .blkbleed-padding {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 { 
-        width: @blk18-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 {
+        width: @blk18-width + @blk-padding-left + @blk-padding-right * 2;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * { 
-        max-width: @blk18-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * {
+        max-width: @blk18-width + @blk-padding-left + @blk-padding-right * 2;
       }
   }
   .blkbleed-border {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 { 
-        width: @blk18-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 {
+        width: @blk18-width + @blk-padding-border-left + @blk-padding-border-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * { 
-        max-width: @blk18-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * {
+        max-width: @blk18-width + @blk-padding-border-left + @blk-padding-border-right;
       }
   }
   .blkbleed-margin {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 { 
-        width: @blk18-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25, &.blk24,  &.blk23, &.blk22, &.blk21, &.blk20, &.blk19 {
+        width: @blk18-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * { 
-        max-width: @blk18-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > *, &.blk24 > *,  &.blk23 > *, &.blk22 > *, &.blk21 > *, &.blk20 > *, &.blk19 > * {
+        max-width: @blk18-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
   }
 }
 
 body[screen=lg] {
   .blkbleed-padding {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 { 
-        width: @blk24-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 {
+        width: @blk24-width + @blk-padding-left + @blk-padding-right * 2;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * { 
-        max-width: @blk24-width + @blk-padding-left + @blk-padding-right * 2; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * {
+        max-width: @blk24-width + @blk-padding-left + @blk-padding-right * 2;
       }
   }
   .blkbleed-border {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 { 
-        width: @blk24-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 {
+        width: @blk24-width + @blk-padding-border-left + @blk-padding-border-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * { 
-        max-width: @blk24-width + @blk-padding-border-left + @blk-padding-border-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * {
+        max-width: @blk24-width + @blk-padding-border-left + @blk-padding-border-right;
       }
   }
   .blkbleed-margin {
-      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 { 
-        width: @blk24-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30, &.blk29, &.blk28, &.blk27, &.blk26, &.blk25 {
+        width: @blk24-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
-      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * { 
-        max-width: @blk24-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; 
+      &.blk30 > *, &.blk29 > *, &.blk28 > *, &.blk27 > *, &.blk26 > *, &.blk25 > * {
+        max-width: @blk24-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;
       }
   }
 }
