--- a/css/less/04-blocks-size4.less
+++ b/css/less/04-blocks-size4.less
@@ -1,12 +1,12 @@
 /**
  * 04-blocks-size4.less - Base block width, padding, border and margin
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // You may change the following values to adapt to design, ideally you want to keep the following proportion:
