--- a/css/less/05-base-vars.less
+++ b/css/less/05-base-vars.less
@@ -1,12 +1,12 @@
 /**
  * 05-base-vars.less - Sets base variables to be used throughout the styles
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Using rem units:
@@ -14,7 +14,7 @@
 // for html to be 62.5%, which equals to 10px. This way we can easily use rem units
 // to set the size of fonts in the rest of the stylesheet. e.g. 1.4rem = 14px
 
-@font-size-base:		1.4rem;   
+@font-size-base:		1.4rem;
 @font-size-h1:			3.6rem;
 @font-size-h2:			2.4rem;
 @font-size-h3:			2rem;
