--- a/css/less/06-common-dividers.less
+++ b/css/less/06-common-dividers.less
@@ -5,12 +5,12 @@
  * http://tympanus.net/codrops/2013/10/03/a-collection-of-separator-styles/
  * http://magicaleditor.com/css-divider-snippets/
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 
@@ -81,35 +81,35 @@
 	background-color: @color-hr;
 }
 
-hr {	
+hr {
 	&.pinstripe {
 		.divider-pinstripe();
 	}
-	
+
 	&.crossed-pinstripe {
 		.divider-crossed-pinstripe();
 	}
-	
+
 	&.wave {
 		.divider-wave();
 	}
-	
+
 	&.saw {
 		.divider-saw();
 	}
-	
+
 	&.stitched {
 		.divider-stitched();
 	}
-	
+
 	&.gradient {
 		.divider-gradient();
 	}
-	
+
 	&.double {
 		.divider-double();
 	}
-	
+
 	&.thick {
 		.divider-thick();
 	}
@@ -129,31 +129,31 @@ hr {
 	&.pinstripe:before {
 		.divider-pinstripe();
 	}
-	
+
 	&.crossed-pinstripe:before {
 		.divider-crossed-pinstripe();
 	}
-	
+
 	&.wave:before {
 		.divider-wave();
 	}
-	
+
 	&.saw:before {
 		.divider-saw();
 	}
-	
+
 	&.stitched:before {
 		.divider-stitched();
 	}
-	
+
 	&.gradient:before {
 		.divider-gradient();
 	}
-	
+
 	&.double:before {
 		.divider-double();
 	}
-	
+
 	&.thick:before {
 		.divider-thick();
 	}
@@ -167,31 +167,31 @@ hr {
 	&.pinstripe:after {
 		.divider-pinstripe();
 	}
-	
+
 	&.crossed-pinstripe:after {
 		.divider-crossed-pinstripe();
 	}
-	
+
 	&.wave:after {
 		.divider-wave();
 	}
-	
+
 	&.saw:after {
 		.divider-saw();
 	}
-	
+
 	&.stitched:after {
 		.divider-stitched();
 	}
-	
+
 	&.gradient:after {
 		.divider-gradient();
 	}
-	
+
 	&.double:after {
 		.divider-double();
 	}
-	
+
 	&.thick:after {
 		.divider-thick();
 	}
