--- a/css/less/07-effects-common.less
+++ b/css/less/07-effects-common.less
@@ -1,12 +1,12 @@
 /**
  * 07-effects-common.less - Base variables and settings for effects, transforms and animations
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // variables for css3 effects and transitions
@@ -15,7 +15,7 @@
 @glow-color:		@color-primary;
 @tint-color:		@color-primary;
 @duotone-color:		@color-primary-dark;
-		
+
 // Duotone color hue calculation:
 // If Red is max, then Hue = (G-B)/(max-min)
 // If Green is max, then Hue = 2.0 + (B-R)/(max-min)
