--- a/css/less/07-effects.less
+++ b/css/less/07-effects.less
@@ -1,21 +1,21 @@
 /**
  * 07-effects.less - CSS3 effects, transforms and animationsommon classes
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
-@import (less) "07-effects-common.less";					// base variables and transitions
+@import (less) "07-effects-common.less";						// base variables and transitions
 @import (less,optional) "custom/07-effects-common.less";		// override
-@import (less) "07-effects-box-text.less";					// box and text effects
+@import (less) "07-effects-box-text.less";						// box and text effects
 @import (less,optional) "custom/07-effects-box-text.less";		// override
-@import (less) "07-effects-image.less";						// image effects
-@import (less,optional) "custom/07-effects-image.less";		// override
-@import (less) "07-effects-hover-focus.less";				// effects applied on hover
+@import (less) "07-effects-image.less";							// image effects
+@import (less,optional) "custom/07-effects-image.less";			// override
+@import (less) "07-effects-hover-focus.less";					// effects applied on hover
 @import (less,optional) "custom/07-effects-hover-focus.less";	// override
 
 // resources:
