--- a/css/less/11-responsive.less
+++ b/css/less/11-responsive.less
@@ -1,12 +1,12 @@
 /**
  * 11-responsive.less - Rules for responsiveness
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Variables definitions
@@ -20,6 +20,6 @@
 
 // Responsive container
 // --------------------------------------------------------------------
-// Depending on the desired layout copy either 11-responsive-container4.less, 
+// Depending on the desired layout copy either 11-responsive-container4.less,
 // 11-responsive-container5.less or 11-responsive-container6.less to this file and customize if needed
 @import (less) "custom/11-responsive-container.less";
