--- a/css/ie8-alert.css
+++ b/css/ie8-alert.css
@@ -1,19 +1,30 @@
-.ie8-alert {
-	background-color:#ffffe7; 
-	background-image:url('../images/ie8-alert.gif'); 
-	background-position:left; 
-	background-repeat:no-repeat; 
-	width:100%; 
-	height:21px; 
-	font-family:Tahoma, Geneva, sans-serif; 
-	font-size:12px; 
-	line-height:21px; 
-	padding:2px 25px; 
-	border-bottom:1px solid #ccc; 
+/**
+ * ie8-alert.css - Styles for IE8 alert box
+ *
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
+ */
+
+ .ie8-alert {
+	background-color:#ffffe7;
+	background-image:url('../images/ie8-alert.gif');
+	background-position:left;
+	background-repeat:no-repeat;
+	width:100%;
+	height:21px;
+	font-family:Tahoma, Geneva, sans-serif;
+	font-size:12px;
+	line-height:21px;
+	padding:2px 25px;
+	border-bottom:1px solid #ccc;
 	position:fixed;
-	top:0px; 
+	top:0px;
 	left:0;
-	z-index:1000; 
+	z-index:1000;
 	color: #000;
 }
 .ie8-alert a {
