--- a/css/less/02-colors-elements.less
+++ b/css/less/02-colors-elements.less
@@ -1,12 +1,12 @@
 /**
  * 02-colors-elements.less - Assigns colors to common elements
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Headings
