--- a/css/less/04-blocks.less
+++ b/css/less/04-blocks.less
@@ -1,31 +1,31 @@
 /**
  * 04-blocks.less - Defines block sizes and rules for consistent layouts
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Blocks base dimensions
 // --------------------------------------------------------------------
-// Depending on the desired layout copy either 04-blocks-size4.less, 
+// Depending on the desired layout copy either 04-blocks-size4.less,
 // 04-blocks-size5.less or 04-blocks-size6.less to this file and customize if needed
-@import (less) "custom/04-blocks-size.less";			
+@import (less) "custom/04-blocks-size.less";
 
 // Common block classes
 // --------------------------------------------------------------------
-@import (less) "04-blocks-common.less";	
+@import (less) "04-blocks-common.less";
 
 // Downsized blocks
 // --------------------------------------------------------------------
-// Depending on the desired layout copy either 04-blocks-downsized4.less, 
+// Depending on the desired layout copy either 04-blocks-downsized4.less,
 // 04-blocks-downsized5.less or 04-blocks-downsized6.less to this file and customize if needed
 @import (less) "custom/04-blocks-downsized.less";
 
 // Fluid blocks
 // --------------------------------------------------------------------
-@import (less) "custom/04-blocks-fluid.less";	
+@import (less) "custom/04-blocks-fluid.less";
 
