--- a/css/less/05-base.less
+++ b/css/less/05-base.less
@@ -1,15 +1,15 @@
 /**
  * 05-base.less - Basic styling for various elements
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
-@import (less) "05-base-vars.less";					// variables for base styles
+@import (less) "05-base-vars.less";						// variables for base styles
 @import (less,optional) "custom/05-base-vars.less";		// override of variables
 @import (less) "05-base-elements.less";					// base element styles
 @import (less,optional) "custom/05-base-elements.less";	// override
