--- a/css/less/06-common-author-date-readmore.less
+++ b/css/less/06-common-author-date-readmore.less
@@ -1,12 +1,12 @@
 /**
  * 06-common-author-date-readmore.less - Styles for author, dates, and read more
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Date
@@ -25,7 +25,7 @@
 // add prefix "Written by" before the author name
 .author {
 	color: @color-copy-light;
-	
+
 	&:before {
 		.fa-user();
 		margin-right: 0.33em;
@@ -41,13 +41,13 @@
 	padding: 0.33em 0.67em;
 	margin: @elem-margin-base 0;
 	text-transform: capitalize;
-	
+
 	&:hover {
 		text-decoration:none;
 		background-color:lighten(@color-primary,10%);
 		color:@color-bg;
 	}
-	
+
 	&:after {
 		.ion-ios-arrow-right();
 		margin-left: 0.75em;
