--- a/css/less/06-common-colors.less
+++ b/css/less/06-common-colors.less
@@ -1,12 +1,12 @@
 /**
  * 06-common-colors.less - Common classes for assigning site brand colors to elements
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 .color-gray-darker { color: @gray-darker; }
