--- a/css/less/06-common-column-grid.less
+++ b/css/less/06-common-column-grid.less
@@ -1,12 +1,12 @@
 /**
  * 06-common-column-grid.less - Common CSS classes for columns: breaks blocks of texts into even-height columns, with a gap equal to the preset padding+border+margin
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 .columns2 {
