--- a/css/less/06-common-font.less
+++ b/css/less/06-common-font.less
@@ -1,12 +1,12 @@
 /**
  * 06-common-font.less - Common CSS classes for font/text styles and effects
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 .font-thin { font-weight:100; }
@@ -21,7 +21,7 @@
 
 .font-serif { font-family: @font-serif; }
 .font-sans-serif { font-family: @font-sans-serif; }
-.font-monospace { 
+.font-monospace {
 	font-family: @font-monospace;
 	// set figures to fixed-width, lining (same height as caps), and slashed zero
 	font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "onum" 0, "pnum" 0, "dlig" 0, "tnum" 1,  "lnum" 1, "zero" 1;
@@ -56,20 +56,20 @@
 .font-pre-line { white-space: pre-line; }
 .font-pre-wrap { white-space: pre-wrap; }
 
-.tiny { 
-	font-size: @font-size-small / 2; 
-	line-height: @line-height-small / 2; 
+.tiny {
+	font-size: @font-size-small / 2;
+	line-height: @line-height-small / 2;
 }
-.small { 
-    font-size: @font-size-small; 
-    line-height: @line-height-small; 
+.small {
+    font-size: @font-size-small;
+    line-height: @line-height-small;
 }
-.big { 
-    font-size: @font-size-big; 
-    line-height: @line-height-big; 
+.big {
+    font-size: @font-size-big;
+    line-height: @line-height-big;
 }
-.huge { 
-    font-size: @font-size-big * 2; 
-    line-height: @line-height-big * 2; 
+.huge {
+    font-size: @font-size-big * 2;
+    line-height: @line-height-big * 2;
 }
 
