--- a/css/less/06-common-image-gallery-video.less
+++ b/css/less/06-common-image-gallery-video.less
@@ -1,12 +1,12 @@
 /**
  * 06-common-image-gallery-video.less - Common CSS classes for images, galleries and video players
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Images
@@ -14,14 +14,14 @@
 
 .image {
 	display: inline-block;
-	
+
 	img {
 		display: block;
 	}
-	
+
 	&.caption { // implemented with javascript
 	}
-	
+
 	.caption {
 		padding: @blk-padding-width 0;
 		.small();
@@ -49,9 +49,9 @@
 .video-16-9 {
 	position: relative;
 	padding-bottom: 56.25%;
-	height: 0; 
+	height: 0;
 	overflow: hidden;
-	
+
 	iframe, object, embed, video {
 	    position: absolute;
 	    top: 0;
@@ -59,15 +59,15 @@
 	    width: 100%;
 	    height: 100%;
 	}
-	
+
 }
 
 .video-4-3 {
 	position: relative;
 	padding-bottom: 75%;
-	height: 0; 
+	height: 0;
 	overflow: hidden;
-	
+
 	iframe, object, embed, video {
 	    position: absolute;
 	    top: 0;
@@ -75,6 +75,6 @@
 	    width: 100%;
 	    height: 100%;
 	}
-	
+
 }
 
