--- a/css/less/06-common-lists.less
+++ b/css/less/06-common-lists.less
@@ -3,12 +3,12 @@
  *
  * Based on: http://www.sitepoint.com/use-webfont-icons-bullet-points-html5-lists/
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 ul.bullets {
