--- a/css/less/06-common.less
+++ b/css/less/06-common.less
@@ -1,12 +1,12 @@
 /**
  * 06-common.less - Common CSS classes
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 @import (less) "06-common-clear-hide-float.less";						// clear, clearfix, hide, off, float left/right, float with margins
