--- a/css/less/07-effects-box-text.less
+++ b/css/less/07-effects-box-text.less
@@ -1,12 +1,12 @@
 /**
  * 07-effects-box-text.less - CSS3 effects and animations for text and box elements
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // basic effects and transformations
@@ -36,7 +36,7 @@
 .box-duotone {
 	position: relative;
 	// saturation is the factor to go from the saturation of sepia (25) to the saturation of glow-color
-	// hue-rotation is calculated starting from sepia's hue of 34 and converted to the hue of glow-color		
+	// hue-rotation is calculated starting from sepia's hue of 34 and converted to the hue of glow-color
 	filter: sepia(1) hue-rotate(unit(@duotone-color-hue - 34, deg));
 }
 
@@ -92,12 +92,12 @@
 
 .round-corners-left {
 	border-top-left-radius: @border-radius;
-	border-bottom-left-radius: @border-radius;	
+	border-bottom-left-radius: @border-radius;
 }
 
 .round-corners-right {
 	border-top-right-radius: @border-radius;
-	border-bottom-right-radius: @border-radius;	
+	border-bottom-right-radius: @border-radius;
 }
 
 .circle-border {
@@ -109,7 +109,7 @@
 }
 
 .shrink {
-	transform: scale(0.8) translateZ(0);	
+	transform: scale(0.8) translateZ(0);
 }
 
 .rotate-0 {
@@ -174,10 +174,10 @@
 }
 
 .text-shadow {
-	text-shadow: 0.05em 0.05em 0.1em @shadow-color;	
+	text-shadow: 0.05em 0.05em 0.1em @shadow-color;
 }
 
 .text-blur {
 	color: rgba(0,0,0,0);
-	text-shadow: 0 0 0.25em @shadow-color;	
+	text-shadow: 0 0 0.25em @shadow-color;
 }
