--- a/css/less/10-lyquix-lyqbox.less
+++ b/css/less/10-lyquix-lyqbox.less
@@ -1,12 +1,12 @@
 /**
  * 10.lyquix-lyqbox.less - Base styles for LyqBox lightbox
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // shared button style, used by prev, next and close
@@ -42,7 +42,7 @@
 	top: 0;
 
 	z-index: 9999;
-	transition: visibility 0s linear 0.5s, opacity 0.5s linear;  
+	transition: visibility 0s linear 0.5s, opacity 0.5s linear;
 	background-color: rgba(0, 0, 0, 0.8);
 	visibility: hidden;
 	opacity: 0;
@@ -59,7 +59,7 @@
 	.content-wrapper {
 		opacity: 0;
 		transition: opacity .5s;
-		
+
 		.content {
 			position: absolute;
 			top: 0px;
@@ -110,7 +110,7 @@
 	.close {
 		.lyqbox-buttons();
 	    right: 10px;
-	    top: 10px;		
+	    top: 10px;
 
 		&:after {
 			.ion-ios-close-empty();
@@ -125,7 +125,7 @@
 
 		&:after {
 			.ion-ios-arrow-left();
-		}					
+		}
 	}
 
 	// next button
