--- a/css/less/11-responsive-container5.less
+++ b/css/less/11-responsive-container5.less
@@ -1,12 +1,12 @@
 /**
  * 11-responsive-container.less - Responsive layout styles for 5 blocks in small screens
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Container
@@ -25,7 +25,7 @@ body[screen=xs] {
 	.container {
 		width: @blk5-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;	// xs screen - 5 blocks
 	}
-	
+
 	&.blkfluid-xs .container {
 		width: 100%;
 	}
@@ -35,17 +35,17 @@ body[screen=sm] {
 	.container {
 		width: @blk10-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;	// sm screen - 10 blocks
 	}
-	
+
 	&.blkfluid-sm .container {
 		width: 100%;
 	}
 }
-  
+
 body[screen=md] {
   .container {
     width: @blk15-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // md screen - 15 blocks
   }
-  
+
   &.blkfluid-md .container {
     width: 100%;
   }
@@ -55,17 +55,17 @@ body[screen=lg] {
   .container {
     width: @blk20-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // lg screen - 20 blocks
   }
-  
+
   &.blkfluid-lg .container {
     width: 100%;
   }
 }
-  
-body[screen=xl] { 
+
+body[screen=xl] {
   .container {
     width: @blk25-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // xl screen - 25 blocks
   }
-  
+
   &.blkfluid-xl .container {
     width: 100%;
   }
