--- a/css/less/99-print-common.less
+++ b/css/less/99-print-common.less
@@ -1,12 +1,12 @@
 /**
  * 99-print-common.less - Common CSS classes to apply for print version
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // page break classes
@@ -27,7 +27,7 @@
     }
 }
 // remove background color and images
-.print-no-background { 
+.print-no-background {
     @media print {
         &, *, *:before, *:after, *:first-letter, *:first-line {
             background: transparent !important;
@@ -61,9 +61,9 @@
             text-shadow: none !important;
         }
     }
-}   
-    
-    
+}
+
+
 // appends the url after links (except anchors and javascript)
 .print-links-href {
     @media print {
@@ -71,7 +71,7 @@
             &:after, &:visited:after {
                 content: " (" attr(href) ")";
             }
-            
+
             &[href^="#"],
             &[href^="javascript:"] {
                 &:after, &:visited:after {
@@ -81,7 +81,7 @@
         }
     }
 }
-    
+
 // appends title after abbreviations
 .print-abbr-title {
     @media print {
