--- a/css/less/99-print-normalize.less
+++ b/css/less/99-print-normalize.less
@@ -1,12 +1,12 @@
 /**
  * 99-print-normalize.less - Normalize CSS styles for print version
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 // Print normalize
@@ -29,12 +29,12 @@
     tr {
         page-break-inside: avoid;
     }
-    
+
     // Avoid breaking images
     img {
         page-break-inside: avoid;
     }
-    
+
     // Allow up to 3 orphan/widow lines
     p,
     h2,
@@ -42,7 +42,7 @@
         orphans: 3;
         widows: 3;
     }
-    
+
     // Don't break right after a heading'
     h1,
     h2,
@@ -52,5 +52,5 @@
     h6 {
         page-break-after: avoid;
     }
-    
+
 }
