--- a/css/less/99-print.less
+++ b/css/less/99-print.less
@@ -1,14 +1,14 @@
 /**
  * 99-print.less - Styles for print version
  *
- * @version     1.0.1
- * @package     tpl_lyquix
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
  * @author      Lyquix
  * @copyright   Copyright (C) 2015 - 2017 Lyquix
  * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
  */
 
 @import (less) "99-print-normalize.less";                   // normalize print styles
 @import (less) "99-print-common.less";                      // common print-related css classes
-@import (less,optional) "custom/99-print.less";             // override 
+@import (less,optional) "custom/99-print.less";             // override
