--- a/css/styles.less
+++ b/css/styles.less
@@ -1,13 +1,19 @@
-// Styles
-// --------------------------------------------------------------------
-// Generates the main CSS file for the template, style.css
-
+/**
+ * styles.less - generates the main CSS file for the template, style.css
+ *
+ * @version     1.0.12
+ * @package     wp_theme_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/wp_theme_lyquix
+ */
 
 @import (less) "less/01-normalize.less";			// normalizes base styles for all browsers
 @import (less) "less/02-colors.less";				// calculates color variations based on color palette
 @import (less) "less/03-fonts.less";				// loads and assigns fonts
 @import (less) "less/04-blocks.less";				// defines the blocks classes for layouts
-@import (less) "less/05-base.less";				// styles for all the base tags
+@import (less) "less/05-base.less";					// styles for all the base tags
 @import (less) "less/06-common.less";				// library of common css classes
 @import (less) "less/07-effects.less";				// css3 effects, transformations, animations
 @import (less) "less/10-lyquix.less";				// lyquix template and modules
