--- a/css/lib/common.scss
+++ b/css/lib/common.scss
@@ -125,11 +125,7 @@
 	// Font family type
 	.font-serif { font-family: $font-serif; }
 	.font-sans-serif { font-family: $font-sans-serif; }
-	.font-monospace {
-		font-family: $font-monospace;
-		// set figures to fixed-width, lining (same height as caps), and slashed zero
-		font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "onum" 0, "pnum" 0, "dlig" 0, "tnum" 1,  "lnum" 1, "zero" 1;
-	}
+	.font-monospace { font-family: $font-monospace; }
 
 	// Font weight
 	.font-thin { font-weight:100; }
@@ -145,8 +141,6 @@
 	// Text transformations
 	.text-smallcaps { font-variant: small-caps; }
 	.text-uppercase { text-transform: uppercase; }
-	.text-smallcaps,
-	.text-uppercase { font-feature-settings: "kern" 1, "liga" 1, "calt" 1, "onum" 1, "pnum" 1, "dlig" 0, "tnum" 0,  "lnum" 0, "smcp" 1; }
 	.text-lowercase { text-transform: lowercase; }
 	.text-capitalize { text-transform: capitalize; }
 
@@ -192,6 +186,28 @@
 		font-size: $font-size-big * 2;
 		line-height: $line-height-big * 0.9;
 	}
+	
+	// Font-features
+	.font-historical-forms { font-variant-alternates: historical-forms; }
+	.font-all-small-caps { font-variant-caps: all-small-caps; }
+	.font-petite-caps { font-variant-caps: petite-caps; }
+	.font-all-petite-caps { font-variant-caps: all-petite-caps; }
+	.font-unicase { font-variant-caps: unicase; }
+	.font-tilting-caps { font-variant-caps: titling-caps; }
+	.font-ordinal { font-variant-numeric: ordinal; }
+	.font-slashed-zero { font-variant-numeric: slashed-zero; }
+	.font-oldstyle-nums { font-variant-numeric: oldstyle-nums; }
+	.font-tabular-nums { font-variant-numeric: tabular-nums; }
+	.font-diagonal-fractions { font-variant-numeric: diagonal-fractions; }
+	.font-stacked-fractions { font-variant-numeric: stacked-fractions; }
+	.font-superscript { font-variant-position: super; }
+	.font-subscript { font-variant-position: sub; }
+	.font-ligatures { font-variant-ligatures: normal; }
+	.font-common-ligatures { font-variant-ligatures: common-ligatures; }
+	.font-discretionary-ligatures { font-variant-ligatures: discretionary-ligatures; }
+	.font-historical-ligatures { font-variant-ligatures: historical-ligatures; }
+	.font-ligatures-contextual { font-variant-ligatures: contextual; }
+	.font-kerning { font-kerning: normal; }
 }
 
 @mixin common-color {
